Fixed adding dishes and guests reloading data to the event_details page

--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
@@ -24,6 +24,14 @@
   </div>
   <br>
   {% endfor %}
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="text-align:center; background-color:aquamarine; display:inline-block;">
+    <a href="{% url 'potlucks:create_event' %}">
+      <h5><span class="glyphicon glyphicon-plus"/></h5>
+    </a>
+    </form>
+    </div>
+  </div>
 </div>
 
 <!--Make second table for invited events-->
