--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
@@ -21,7 +21,7 @@
           <div class="col-xs-6"><h5>{{ event.rsvp_count }} Guests Confirmed</h5></div>
         </div>
       </div>
-  </div>
+    </div>
   <br>
   {% endfor %}
   <div class="row">
@@ -36,16 +36,22 @@
 
 <!--Make second table for invited events-->
 <div class="col-sm-6">
-<h2>Events I'm attending:</h2>
-<div class="row">
-{% for instance in invited_list %}
-<div class="col-sm-6 col-xs-12" style="background-color:palegreen; display:inline-block;" style="cursor:pointer !important;" onclick="loadEvent('{{ instance.event.pk }}');">
-<h3>{{ instance.event.name }}</h3>
-<div class="row">
-<div class="col-sm-6"><h5>{{ instance.event.start_time }}</h5></div></div></div>
+  <h2>Events I'm attending:</h2>
+  {% for instance in invited_list %}
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="background-color:palegreen; display:inline-block;" style="cursor:pointer !important;" onclick="loadEvent('{{ instance.event.pk }}');">
+      <h3>{{ instance.event.name }}</h3>
+      <div class="row">
+        <div class="col-xs-6">
+          <h5>{{ instance.event.start_time }}</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
 {% endfor %}
 </div>
-</div>
+
 </div>
 </div>
 </div>
