Fixed username and location restrictions

--- a/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
@@ -53,7 +53,7 @@
     <input type="text" name="event_key" id="keyInput" pattern="[a-zA-Z0-9]+" /></li>
 
     <li><label for="locationInput">Location:</label><br>
-    <input type="text" id="locationInput" name="address" title="Numerical address and street" pattern="[A-Za-z0-9,\s]+" required /></li>
+    <input type="text" id="locationInput" name="address" title="Numerical address and street" pattern="[A-Za-z0-9',\s]+" required /></li>
     </div>
     <div class="col-sm-6" style="display:inline-block;">
       <li><label for="startDate">Start Date:</label><br>
