--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
@@ -38,7 +38,7 @@
     
         <li><b>Username:</b><br>
         <div class="forms-input">
-        <input type="text" name="username" id="userInput" pattern="[A-Za-z]+[A-Za-z0-9]" title="Letters and numbers only, must start with a letter and contain 6-12 characters" required/>
+        <input type="text" name="username" id="userInput" pattern="[A-Za-z]+[A-Za-z0-9]+" title="Letters and numbers only, must start with a letter and contain 6-12 characters" required/>
         <p id="nameAvailable" class="forms-help">The username is long enough</p></div></li>
     
         <li><b>Password:</b><br>
