--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
@@ -58,7 +58,7 @@
 <script>
 $(document).ready(function()
 {
-  $("#userInput").keyup(function()
+  $("#userInput").change(function()
   {
     var uname = $("#userInput").val().trim();
 
