--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/table-list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
 
 <style>
 .modal {
@@ -26,6 +27,32 @@
     /* To center horizontally */
     margin: 0 auto;
 }
+.dishButton{
+  border: solid green 2px;
+  text-align:center;
+  vertical-align:middle;
+  border-radius:50%;
+  color:green;
+  padding:4px 4px 4px 4px;
+  font-size:24px;
+}
+.dishP{
+  display:none;
+}
+.dishInfo{
+  padding-top:4px;
+  font-size:24px;
+}
+.assign {
+    font-size: 20px;
+    border-radius: 5px;
+    border: solid green 1px;
+    background: linear-gradient(lawngreen, green);
+    color: white;
+    font-weight: bold;
+    text-align:center;
+}
+
 </style>
 
 <div class="container main">
@@ -80,29 +107,102 @@
 <div class="col-sm-6">
   <div class="row"><div class="col-sm-2 col-sm-offset-2">
   <h2>Dishes</h2></div></div>
-  {% for dish in event.assignment_set.all %}
-    <div class="row">
-      <div class="col-sm-6 col-xs-12" style="background-color:aquamarine; display:inline-block;">
-      <div class="col-xs-5"><h5>{{ dish.dish_type }}</h5></div>
-      <div class="col-xs-5"><h5>
-        {% if dish.assignment_status %}
-          Assigned
-        {% else %}
-          Unassigned
-        {% endif %}</h5>
-      </div>
-      {% if event.host == request.user %} 
-        <div class="col-xs-2" onclick="removeDish('{{ event.pk }}', '{{ dish.pk }}');"><h5><span class="glyphicon glyphicon-remove"/></h5></div>
-      {% endif %}
-    </div>
-    </div>
-    <br>
-  {% endfor %}
-{% if event.host == request.user %} 
+  <br>
+  <!-- CREATE ROWS FOR EVERY DISH TYPE (MIGHT REFACTOR LATER) -->
+  <!-- APPETIZERS START-->
   <div class="row">
-    <div class="col-sm-6 col-xs-12" style="text-align:center; background-color:aquamarine; display:inline-block;" data-toggle="modal" data-target="#dishModal" >
-      <h5><span class="glyphicon glyphicon-plus"/></h5>
-    </form>
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="appMinus" class="dishP"><span class="glyphicon glyphicon-minus dishButton"></span></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Appetizers</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="appCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="appPlus" class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- APPETIZERS END-->
+  <!-- SOUPS START-->
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="soupMinus"class="dishP"><span class="glyphicon glyphicon-minus dishButton"></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Soups</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="soupCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="soupPlus"class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- SOUPS END-->
+  <!-- SALADS START-->
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="saladMinus"class="dishP"><span class="glyphicon glyphicon-minus dishButton"></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Salads</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="saladCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="saladPlus"class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- SALADS END-->
+  <!-- ENTREES START-->
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="entreeMinus"class="dishP"><span class="glyphicon glyphicon-minus dishButton"></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Entrees</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="entreeCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="entreePlus"class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- ENTREES END-->
+  <!-- DESSERTS START-->
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="dessertMinus"class="dishP"><span class="glyphicon glyphicon-minus dishButton"></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Dessert</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="dessertCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="dessertPlus"class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- DESSERTS END-->
+  <!-- BEVERAGES START-->
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" style="display:block;">
+{% if event.host == request.user %}
+      <div class="col-xs-2" style="left-border:0px;"><p id="beverageMinus"class="dishP"><span class="glyphicon glyphicon-minus dishButton"></p></div>
+{% endif %}
+      <div class="col-xs-6"><p class="dishInfo">Beverages</p></div>
+      <div class="col-xs-2"><p class="dishInfo" id="beverageCount">0</p></div>
+{% if event.host == request.user %}
+      <div class="col-xs-1"><p id="beveragePlus"class="dishP"><span class="glyphicon glyphicon-plus dishButton"/></p></div>
+{% endif %}
+    </div>
+  </div>
+  <!-- BEVERAGES END-->
+
+{% if event.host == request.user %}
+  <div class="row">
+    <div class="col-sm-6 col-xs-12 assign" id="assignBtn" style="display:none;" onclick="addDishTallies();">
+      Save
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 col-xs-12 assign" id="editBtn" onclick="allowEdit();" style="display:inline-block;">
+      Edit
     </div>
   </div>
 {% endif %}
@@ -115,19 +215,30 @@
   </div></div>
 {% for guest in event.guest_instance_set.all %}
   <div class="row">
-      <div class="col-sm-6 col-xs-12" style="background-color:aquamarine; display:inline-block;">
-      <div class="col-xs-6"><h5>
+    <div class="col-sm-6 col-xs-12" style="background-color:aquamarine; display:inline-block;">
+      <div class="row">
+        <div class="col-xs-6"><h5>
         {% if guest.guest %}
-        {% if guest.guest.first_name != '' %}{{ guest.guest.first_name }}
-        {% else %}
-        {{ guest.guest.username }}{% endif %}
+          {% if guest.guest.first_name != '' %}{{ guest.guest.first_name }}
+          {% else %}
+            {{ guest.guest.username }}{% endif %}
         {% else %}{{ guest.email }}{% endif %}</h5>
+        </div>
+        <div class="col-xs-6"><h5>
+        {{ guest.get_rsvp_status_display }}
+        </h5>
+        </div>
       </div>
-      <div class="col-xs-6"><h5>
-      {{ guest.get_rsvp_status_display }}
-      </h5></div>
-  </div>
-  </div>
+      <div class="row">
+        <div class="col-xs-6">
+          <h5>{{ guest.assignment.dish_type }}</h5>
+        </div>
+        <div class="col-xs-6">
+          <h5>{{ guest.assignment.dish_name }}</h5>
+        </div>
+      </div>
+</div>
+</div>
 <br>
 {% endfor %}
 {% if event.host == request.user %} 
@@ -197,6 +308,20 @@
 
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
 <script>
+
+  var appetizerCount = '{{ tallies.app_needed }}';
+  var appetizerHave = '{{ tallies.app_assigned }}';
+  var soupCount = '{{ tallies.soup_needed }}';
+  var soupHave = '{{ tallies.soup_assigned }}';
+  var saladCount = '{{ tallies.salad_needed }}';
+  var saladHave = '{{ tallies.salad_assigned }}';
+  var entreeCount = '{{ tallies.entree_needed }}';
+  var entreeHave = '{{ tallies.entree_assigned }}';
+  var dessertCount = '{{ tallies.dessert_needed }}';
+  var dessertHave = '{{ tallies.dessert_assigned }}';
+  var beverageCount = '{{ tallies.beverage_needed }}';
+  var beverageHave = '{{ tallies.beverage_assigned }}';
+
   $(document).ready(function()
   {
     $("#radioGoing").change(function()
@@ -220,7 +345,146 @@
         $("#submitButton").prop('disabled', false);
       }
     });
-  });
+    //BLOCK FOR APPETIZERS
+    $("#appCount").html(appetizerHave + '/' + appetizerCount);
+    $("#appMinus").click(function() {
+      if( appetizerCount > 0 )
+        appetizerCount--;
+      $("#appCount").html(appetizerCount);
+    });
+    $("#appPlus").click(function() {
+      appetizerCount++;
+      $("#appCount").html(appetizerCount);
+    });
+    //END BLOCK FOR APPETIZERS
+    //BLOCK FOR SOUPS
+    $("#soupCount").html(soupHave + '/' + soupCount);
+    $("#soupMinus").click(function() {
+      if( soupCount > 0 )
+        soupCount--;
+      $("#soupCount").html(soupCount);
+    });
+    $("#soupPlus").click(function() {
+      soupCount++;
+      $("#soupCount").html(soupCount);
+    });
+    //END BLOCK FOR SOUPS
+    //BLOCK FOR SALADS
+    $("#saladCount").html(saladHave + '/' + saladCount);
+    $("#saladMinus").click(function() {
+      if( saladCount > 0 )
+        saladCount--;
+      $("#saladCount").html(saladCount);
+    });
+    $("#saladPlus").click(function() {
+      saladCount++;
+      $("#saladCount").html(saladCount);
+    });
+    //END BLOCK FOR SALADS
+    //BLOCK FOR ENTREES
+    $("#entreeCount").html(entreeHave + '/' + entreeCount);
+    $("#entreeMinus").click(function() {
+      if( entreeCount > 0 )
+        entreeCount--;
+      $("#entreeCount").html(entreeCount);
+    });
+    $("#entreePlus").click(function() {
+      entreeCount++;
+      $("#entreeCount").html(entreeCount);
+    });
+    //END BLOCK FOR ENTREES
+    //BLOCK FOR DESSERTS
+    $("#dessertCount").html(dessertHave + '/' + dessertCount);
+    $("#dessertMinus").click(function() {
+      if( dessertCount > 0 )
+        dessertCount--;
+      $("#dessertCount").html(dessertCount);
+    });
+    $("#dessertPlus").click(function() {
+      dessertCount++;
+      $("#dessertCount").html(dessertCount);
+    });
+    //END BLOCK FOR DESSERTS
+    //BLOCK FOR BEVERAGES
+    $("#beverageCount").html(beverageHave + '/' + beverageCount);
+    $("#beverageMinus").click(function() {
+      if( beverageCount > 0 )
+        beverageCount--;
+      $("#beverageCount").html(beverageCount);
+    });
+    $("#beveragePlus").click(function() {
+      beverageCount++;
+      $("#beverageCount").html(beverageCount);
+    });
+    //END BLOCK FOR BEVERAGES
+      });
+
+function allowEdit()
+{
+      $("#appMinus").show();
+      $("#appPlus").show();
+      $("#soupMinus").show();
+      $("#soupPlus").show();
+      $("#saladMinus").show();
+      $("#saladPlus").show();
+      $("#entreeMinus").show();
+      $("#entreePlus").show();
+      $("#dessertMinus").show();
+      $("#dessertPlus").show();
+      $("#beverageMinus").show();
+      $("#beveragePlus").show();
+      $("#assignBtn").show();
+      $("#editBtn").hide();
+}
+
+function addDishTallies()
+{
+  var form = document.createElement('form');
+  form.setAttribute('method', 'POST');
+  form.setAttribute('action', "{% url 'potlucks:event_add_dish_tallies' %} ");
+  var eventInput = document.createElement('input');
+  eventInput.setAttribute('type', 'hidden');
+  eventInput.setAttribute('name', 'event_id');
+  eventInput.setAttribute('value', '{{ event.pk }}');
+  var appInput = document.createElement('input');
+  appInput.setAttribute('type', 'hidden');
+  appInput.setAttribute('name', 'app_count');
+  appInput.setAttribute('value', appetizerCount);
+  var soupInput = document.createElement('input');
+  soupInput.setAttribute('type', 'hidden');
+  soupInput.setAttribute('name', 'soup_count');
+  soupInput.setAttribute('value', soupCount);
+  var saladInput = document.createElement('input');
+  saladInput.setAttribute('type', 'hidden');
+  saladInput.setAttribute('name', 'salad_count');
+  saladInput.setAttribute('value', saladCount);
+  var entreeInput = document.createElement('input');
+  entreeInput.setAttribute('type', 'hidden');
+  entreeInput.setAttribute('name', 'entree_count');
+  entreeInput.setAttribute('value', entreeCount);
+  var dessertInput = document.createElement('input');
+  dessertInput.setAttribute('type', 'hidden');
+  dessertInput.setAttribute('name', 'dessert_count');
+  dessertInput.setAttribute('value', dessertCount);
+  var beverageInput = document.createElement('input');
+  beverageInput.setAttribute('type', 'hidden');
+  beverageInput.setAttribute('name', 'beverage_count');
+  beverageInput.setAttribute('value', beverageCount);
+  var inputToken = document.createElement('input');
+  inputToken.setAttribute('type', 'hidden');
+  inputToken.name = 'csrfmiddlewaretoken';
+  inputToken.value = '{{ csrf_token }}';
+  form.appendChild(eventInput);
+  form.appendChild(inputToken);
+  form.appendChild(appInput);
+  form.appendChild(soupInput);
+  form.appendChild(saladInput);
+  form.appendChild(entreeInput);
+  form.appendChild(dessertInput);
+  form.appendChild(beverageInput);
+  document.body.appendChild(form);
+  form.submit();
+}
 
 function addGuest( eventId )
 {
