--- a/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
@@ -50,8 +50,8 @@
     <input type="text" class="form-control" name="event_name" id="nameInput" required/></li>
 
     <li><label for="keyInput">Event Key:</label>(Optional)<br>
-    <input type="text" name="event_key" id="keyInput" pattern="[a-zA-Z0-9]+" /></li>
-
+    <input type="text" name="event_key" id="keyInput" pattern="[a-zA-Z0-9]+" required/></li>
+    <li><p id="keyAvailable" class="forms-help">The username is long enough</p></li>
     <li><label for="locationInput">Location:</label><br>
     <input type="text" id="locationInput" name="address" title="Numerical address and street" pattern="[A-Za-z0-9',\s]+" required /></li>
     </div>
@@ -86,7 +86,7 @@
 </div>
       <div class="row">
       <div class="col-xs-6 col-sm-6">
-      <br><li><input type="submit" id="create" value="Create Event" /></li>
+      <br><li><input type="submit" id="create" value="Create Event" disabled/></li>
       </div>
       </div>
 </ul>
@@ -104,5 +104,46 @@ $(document).ready(function()
     $("#startDate").datepicker();
     $("#endDate").datepicker();
     $('input.timepicker').timepicker({});
+
+
+$("#keyInput").change(function()
+  {
+    var key = $("#keyInput").val().trim();
+
+    if(key.length >= 3)
+    {
+      $("#keyAvailable").show();
+            
+      $.ajax(
+      {
+        url: '/ajax/validate_event_key',
+        data: 
+        {
+          'eventkey': key
+        },
+        datatype: 'json',
+        success: function(data)
+        {
+          if(data.in_use)
+          {
+            $("#keyAvailable").html("<b>Key is already taken</b>").css("color", "red");       
+            $("input[type=submit]").prop("disabled", true);  
+          }
+          else
+          {
+            $("#keyAvailable").html("<b>Key is available</b>").css("color", "green");     
+            $("input[type=submit]").removeAttr("disabled");  
+          }
+        }
+      });
+    }
+    else if(uname.length >= 1)
+    {
+      $("#keyAvailable").show();
+      $("#keyAvailable").html("<b>Key is too short</b>").css("color", "red");       
+      $("input[type=submit]").prop("disabled", true);  
+    }
+  });
+
 });
 </script>
