Added warning if dish is already provided

--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
@@ -60,14 +60,14 @@
 {% if request.user != event.host %}
 <div class="table-list" >
 <table style="border: blue solid 2px;">
-<th>Going?</th>
+<th>You RSVPd:</th>
 {% if guest_instance.rsvp_status == 2 %}
-<th>Dish</th>
+<th>You are bringing:</th>
 {% endif %}
 <tr>
 <td>{{ guest_instance.get_rsvp_status_display }}</td>
 {% if guest_instance.rsvp_status == 2 %}
-<td>{{ guest_instance.assignment.dish_type }}</td>
+<td>{{ guest_instance.assignment.dish_name }}</td>
 {% endif %}
 </tr>
 </table>
@@ -85,6 +85,10 @@
 <!--DISPLAY EVENT PARAMETERS HERE-->
 <div class="container">
 <div class="row">
+<div class="col-xs-12 col-sm-12">
+<h3>Hosted By</h3>
+{{ event.host.first_name }} {{ event.host.last_name }}
+</div>
 <div class="col-xs-12 col-sm-3">
 <h3>Location</h3>
 {{ event.location }}
@@ -242,7 +246,7 @@
 <br>
 {% endfor %}
 {% if event.host == request.user %} 
-  <div class="row">
+  <div class="row" style="display:none;">
     <!--<div class="col-sm-6 col-xs-12" style="text-align:center; background-color:aquamarine; display:inline-block;" onclick="addGuest('{{ event.pk }}');">-->
     <div class="col-sm-6 col-xs-12" style="text-align:center; background-color:aquamarine; display:inline-block;" data-toggle="modal" data-target="#guestModal">
       <h5><span class="glyphicon glyphicon-plus"/></h5>
