--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
@@ -182,7 +182,7 @@
   <div class="row">
     <div class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2 assign" id="dishNext">NEXT</div></div>
   <div class="row">
-    <div class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2" id="dishTaken">Dish Available</div></div>
+    <div class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2" id="dishTaken"></div></div>
   <div class="row">
     <input class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2 assign" id="dishSubmit" type="submit" value="SUBMIT" style="display:none;" disabled/>
   </div>
