--- a/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
@@ -60,12 +60,12 @@
         <div class="row">
           <div class="col-xs-6 col-lg-4">
           <div class="inner-addon left-addon"><i class="glyphicon glyphicon-calendar"></i>
-            <input type="text" name="start_date" id="startDate" style="width:7em" required />
+            <input type="text" name="start_date" id="startDate" style="width:7em" readonly required />
 </div>
           </div>
           <div class="col-xs-6 col-sm-4">
           <div class="inner-addon left-addon"><i class="glyphicon glyphicon-dashboard"></i>
-            <input type="text" name="start_time" class="timepicker" style="width:6em" id="startTime"/></div>
+            <input type="text" name="start_time" class="timepicker" style="width:6em" id="startTime" readonly/></div>
           </div>
         </div>
       </li>
@@ -74,11 +74,11 @@
         <div class="row">
           <div class="col-xs-6 col-sm-4">
           <div class="inner-addon left-addon"><i class="glyphicon glyphicon-calendar"></i>
-            <input type="text" name="end_date"  id="endDate" style="width:7em" required /></div>
+            <input type="text" name="end_date"  id="endDate" style="width:7em" required readonly /></div>
           </div>
           <div class="col-xs-6 col-sm-4">
           <div class="inner-addon left-addon"><i class="glyphicon glyphicon-dashboard"></i>
-            <input type="text" name="end_time" class="timepicker" style="width:6em" id="endTime"/></div>
+            <input type="text" name="end_time" class="timepicker" style="width:6em" id="endTime" readonly/></div>
           </div>
         </div>
       </li>
@@ -101,8 +101,13 @@
 <script>
 $(document).ready(function()
 {
-    $("#startDate").datepicker();
-    $("#endDate").datepicker();
+    $("#startDate").datepicker({ minDate: 0 });
+    $("#startDate").change(function(){
+      $("#endDate").val("");
+      $("#endDate").datepicker( "destroy" );
+      $("#endDate").datepicker({ minDate: new Date($("#startDate").val()) });
+    });
+    $("#endDate").datepicker({ minDate: 0 });
     $('input.timepicker').timepicker({});
 
 
