Added maxlength to RSVP add dish

--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_rsvp_invite.html
@@ -176,7 +176,7 @@
   <input type="hidden" name="event_id" value="{{ event.pk }}"/>
   <input type="hidden" name="dish_type"/>
   <div class="row">
-    <input class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2" type="text" name="dish_name" placeholder="Enter dish name" id="dishText"/>
+    <input class="col-sm-4 col-xs-8 col-sm-offset-2 col-xs-offset-2" type="text" name="dish_name" placeholder="Enter dish name" id="dishText" maxlength="20"/>
   </div>
   <br>
   <div class="row">
